hphp/hack/test/typecheck/tuple_index_2.php.like_types.exp
File "tuple_index_2.php", line 5, characters 10-16:
Invalid return type (Typing[4336])
File "tuple_index_2.php", line 5, characters 10-16:
Expected void because this function implicitly returns void
File "tuple_index_2.php", line 8, characters 4-11:
But got dynamic because it is an unenforceable type
